# tellygrab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml
docs/: PRODUCT_NOTES.md
scripts/: check.sh
src/tellygrab/: __init__.py  cli.py
tests/: test_cli.py
